name:                pgn-vizu
version:             0.1.0.0
synopsis:            Vizualizer for PGN files
description:         Please see README.md
homepage:            https://github.com/ptitfred/pgn-vizu#readme
license:             BSD3
license-file:        LICENSE
author:              Frédéric Menou
maintainer:          example@example.com
copyright:           2016 Frédéric Menou
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PGN
                     , Models
                     , Move
                     , Printer
                     , FEN
  other-modules:       ParsingUtilities
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , mtl
                     , transformers
                     , lens
  default-language:    Haskell2010

executable pgn-vizu
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , pgn-vizu
  default-language:    Haskell2010

test-suite pgn-vizu-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , pgn-vizu
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pgn-vizu
